# sql2mongo

./: .gitignore  README.md  app.py  custom_schema.json  gunicorn.conf.py  pyproject.toml  requirements.txt  schema.json  setup.sh  test_results.txt  test_results2.txt
db/: postgres_setup.sql
sql2mongo/: schema_loader.py
sql2mongo/ast/: nodes.py
sql2mongo/codegen/: mongodb_generator.py  optimizer.py
sql2mongo/parser/: sql_parser.py
sql2mongo/semantic/: semantic_analyzer.py
templates/: index.html
tests/: test_codegen.py  test_lexer.py  test_parser.py  test_semantic.py
